# bitcoin-window-mul

./: .gitattributes  .gitignore  CITATION.cff  Cargo.toml  README.md
.github/workflows/: rust.yaml
paper/: iacrdoc.tex  iacrtrans.cls  refs.bib
sage/: composite.sage  optimized.sage  u29x9.sage  wnaf.sage
src/: debug.rs  lib.rs  pseudo.rs  script_loader.rs
src/bigint/: add.rs  bits.rs  cmp.rs  implementation.rs  int_extended.rs  int_simple.rs  mod.rs  mul.rs  naf.rs  performance.rs  std.rs  u508.rs  window.rs
src/bigint/arithmetics/: add.rs  mod.rs  mul.rs  shl.rs  test.rs  u29x9.rs
src/bigint/bits/: implementation.rs  mod.rs  test.rs
src/bigint/cmpeq/: bigint255_mul15_x17.asm  mod.rs  test.rs
src/bigint/cmpeq/asm_tests/: test_1.asm  test_2.asm  test_3.asm
src/bigint/comparison/: implementation.rs  mod.rs  test.rs
src/bigint/composed/: mod.rs
src/bigint/naf/: implementation.rs  mod.rs  test.rs
src/bigint/stack/: implementation.rs  int_extended.rs  mod.rs  test.rs
src/bigint/std/: mod.rs  std.rs  test.rs
src/bigint/window/: mod.rs  mul.rs  precompute.rs  test.rs
src/sage/: window.sage
src/traits/: arithmeticable.rs  bigint.rs  bitable.rs  comparable.rs  integer.rs  mod.rs  window.rs
