[package]
name    = "bitcoin-window-mul"
version = "0.1.0"
edition = "2021"
exclude = ["tests"]

[dependencies]
# Bitcoin dependencies
bitcoin              = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm", features = ["rand-std"]}
bitcoin-script       = { git = "https://github.com/BitVM/rust-bitcoin-script" }
bitcoin-scriptexec   = { git = "https://github.com/BitVM/rust-bitcoin-scriptexec/"}
bitcoin-script-stack = { git = "https://github.com/FairgateLabs/rust-bitcoin-script-stack"}

# Some default dependencies
prettytable-rs = "0.10.0"
seq-macro      = "0.3.5"

# Crypto
num-bigint = { version = "0.4.4", features = ["rand"] }
num-traits = "0.2.18"
ark-ff     = "0.4.0"

[dev-dependencies]
rand_chacha = "0.3.1"
rand        = "0.8.5"
konst       = "0.3.9"

[profile.dev]
opt-level = 3

[profile.release]
lto = true

[patch.crates-io.base58check]
git    = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin]
git    = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin_hashes]
git    = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin-internals]
git    = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin-io]
git    = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"

[patch.crates-io.bitcoin-units]
git    = "https://github.com/rust-bitcoin/rust-bitcoin"
branch = "bitvm"
